@startuml

class Phone {
+ charging(): void
}

interface Voltage5V {
+ output5V(): void
}

class Voltage220V {
+ output220V(): void
}

class VoltageAdapter {
- voltage220v: Voltage220V
+ VoltageAdapter(Voltage220V)
}

Voltage5V <|.. VoltageAdapter
Voltage220V --o VoltageAdapter

Voltage5V <.. Phone

class Client

Phone <.. Client
VoltageAdapter <.. Client
Voltage220V <.. Client

@enduml
